--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,283 @@
-/* место для вашего кода */
+.header {
+	height: 293px;
+	display: grid;
+	grid-template-columns: 1fr min-content 1fr;
+	align-items: center;
+	padding-left: 50px;
+	padding-right: 50px;
+	font-size: 18px;
+	text-underline-position: under;
+}
+
+.menu_list {
+	text-decoration: underline;
+	display: flex;
+}
+
+.header__links-list {
+	gap: 32px;
+	list-style: circle;
+}
+
+.header__logo {
+	display: block;
+	width: 136px;
+	height: 105px;
+}
+
+.address {
+	max-width: 264px;
+	font-style: normal;
+	display: flex;
+	flex-direction: column;
+	line-height: 24.3px;
+}
+
+.header__address {
+	justify-self: end;
+	width: 240px;
+}
+
+.header__links-list-item_no-bullit  {
+	list-style-type: none;
+}
+
+.link_active {
+	display: inline-block;
+	text-decoration: none;
+}
+
+.cover {
+	background-image: url('/images/cover.jpg');
+	min-height: 757px;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	background-size: cover;
+	background-repeat: no-repeat;
+	text-transform: uppercase;
+	color: #fff;
+	padding-left: 50px;
+	padding-right: 50px;
+	background-position: center;
+}
+
+.overlay {
+	background-color: rgb(0, 0, 0, 0.6);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+}
+
+.cover__title {
+	display: flex;
+	flex-direction: column;
+	z-index: 2;
+	margin-top: 165px;
+	color: #fff;
+	font-weight: bold;
+	font-size: 100px;
+	line-height: 114.99999999999999%;
+}
+
+.aligned-text_left {
+	align-self: flex-start;
+	display: block;
+}
+
+.aligned-text_center {
+	align-self: center;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	display: block;
+}
+
+.aligned-text_right {
+	align-self: flex-end;
+	margin-bottom: 106px;
+	display: block;
+}
+
+.letter-spacing-extended {
+	letter-spacing: 30px;
+}
+
+.no-letter-spacing {
+	margin-right: -30px;
+}
+
+.cover__description {
+	z-index: 1;
+	font-size: 22px;
+	word-spacing: 18px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.bet-button {
+	width: 256px;
+	height: 51px;
+	background-color: transparent;
+	border: #fff solid 1px;
+	color: #fff;
+	text-transform: uppercase;
+}
+
+.lots {
+	min-height: 723px;
+	margin-top: 180px;
+	padding-left: 24px;
+	padding-right: 24px;
+	font-size: 20px;
+}
+
+.lots__heading {
+	text-transform: uppercase;
+	font-size: 40px;
+	margin-left: 40px;
+}
+
+.lots__card-list {
+	margin-top: 27px;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 25px;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.lots__card-list-item {
+	min-height: 596px;
+	width: 334px;
+	list-style-type: none;
+}
+
+.card-link {
+	height: 100%;
+}
+
+.card {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	position: relative;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	padding: 48px 40px;
+	color: #fff;
+}
+
+.card_type_film {
+	background-image: url(/images/card-lot-01.jpg);
+}
+
+.card_type_book {
+	background-image: url(/images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+	background-image: url(/images/card-lot-03.jpg);
+}
+
+.card__title {
+	z-index: 2;
+	font-size: 22px;
+	text-transform: uppercase;
+	text-decoration: underline;
+}
+
+.card__text {
+	z-index: 2;
+}
+
+.lots__look-more-link {
+	display: block;
+	margin-left: 40px;
+	margin-top: 30px;
+	text-decoration: underline;
+	text-underline-position: under;
+}
+
+.about {
+	min-height: 595px;
+	display: grid;
+	grid-template-columns: 334px auto;
+	gap: 25px;
+	margin-top: 120px;
+	padding-left: 24px;
+	padding-right: 24px;
+}
+
+.about__logo {
+	display: flex;
+	justify-content: center;
+	margin-top: 35px;
+}
+
+.about__logo-background {
+	display: flex;
+	justify-content: center;
+	height: 240px;
+	width: 240px;
+	background-color: #000;
+	border-radius: 120px;
+}
+
+.about__logo-image {
+	width: 60%;
+}
+
+.about__title {
+	display: flex;
+	margin-top: 136px;
+	text-transform: uppercase;
+	font-size: 40px;
+}
+
+.about__text {
+	margin-top: 100px;
+	font-size: 20px;
+}
+
+.about__text-first-paragraph {
+	padding-right: 5px;
+	margin-bottom: 24px;
+	line-height: 24px;
+}
+
+.footer {
+	margin-top: 180px;
+	min-height: 180px;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	padding-left: 50px;
+	padding-right: 50px;
+	font-size: 18px;
+}
+
+.footer__menu-list {
+	flex-direction: column;
+	align-items: center;
+	list-style-type: none;
+}
+
+.footer__social-list-item {
+	list-style-type: none;
+}
+
+.footer__social-icon {
+	height: 48px;
+	width: 48px;
+}
+
+.footer__social-list {
+	display: flex;
+	justify-content: end;
+	gap: 48px;
+}
