--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,18 @@
+
 .header {
-	height: 293px;
-	display: grid;
-	grid-template-columns: 1fr min-content 1fr;
-	align-items: center;
-	padding-left: 50px;
-	padding-right: 50px;
-	font-size: 18px;
-	text-underline-position: under;
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  min-height: 293px;
+  padding-right: 50px;
+  padding-left: 50px;
+  font-size: 18px;
+  text-underline-position: under;
 }
 
-.menu_list {
-	text-decoration: underline;
-	display: flex;
+.links_list {
+  display: flex;
+  text-decoration: underline;
 }
 
 .header__links-list {
@@ -19,27 +20,8 @@
 	list-style: circle;
 }
 
-.header__logo {
-	display: block;
-	width: 136px;
-	height: 105px;
-}
-
-.address {
-	max-width: 264px;
-	font-style: normal;
-	display: flex;
-	flex-direction: column;
-	line-height: 24.3px;
-}
-
-.header__address {
-	justify-self: end;
-	width: 240px;
-}
-
 .header__links-list-item_no-bullit {
-	list-style-type: none;
+	list-style: none;
 }
 
 .link_active {
@@ -47,37 +29,56 @@
 	text-decoration: none;
 }
 
+.header__logo {
+  display: block;
+  width: 136px;
+  height: 107px;
+}
+
+.address {
+  display: flex;
+  flex-direction: column;
+  max-width: 264px;
+  font-style: normal;
+  line-height: 24.3px;
+}
+
+.header__address {
+  justify-self: end;
+  width: 240px;
+}
+
 .cover {
-	background-image: url('/images/cover.jpg');
-	min-height: 757px;
+	position: relative;
 	display: flex;
 	flex-direction: column;
-	position: relative;
-	background-size: cover;
-	background-repeat: no-repeat;
-	text-transform: uppercase;
+	justify-content: space-between;
+	min-height: 757px;
+	padding: 50px;
 	color: #fff;
-	padding-left: 50px;
-	padding-right: 50px;
+	text-transform: uppercase;
+	background-image: url('/images/cover.jpg');
+	background-repeat: no-repeat;
 	background-position: center;
+	background-size: cover;
 }
 
 .overlay {
-	background-color: rgb(0, 0, 0, 0.6);
 	position: absolute;
 	top: 0;
 	left: 0;
+	z-index: 1;
 	width: 100%;
 	height: 100%;
-	z-index: 1;
+	background-color: rgb(0, 0, 0, 0.6);
 }
 
 .cover__title {
+	z-index: 2;
 	display: flex;
 	flex-direction: column;
-	z-index: 2;
-	margin-top: 165px;
-	color: #fff;
+  gap: 20px;
+	margin-top: 115px;
 	font-weight: bold;
 	font-size: 100px;
 	line-height: 114.99999999999999%;
@@ -85,20 +86,14 @@
 
 .aligned-text_left {
 	align-self: flex-start;
-	display: block;
 }
 
 .aligned-text_center {
 	align-self: center;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	display: block;
 }
 
 .aligned-text_right {
 	align-self: flex-end;
-	margin-bottom: 106px;
-	display: block;
 }
 
 .letter-spacing-extended {
@@ -111,49 +106,48 @@
 
 .cover__description {
 	z-index: 1;
-	font-size: 22px;
-	word-spacing: 18px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	font-size: 22px;
+	word-spacing: 19px;
 }
 
 .bet-button {
 	width: 256px;
 	height: 51px;
-	background-color: transparent;
 	border: #fff solid 1px;
 	color: #fff;
 	text-transform: uppercase;
+	background-color: transparent;
 }
 
 .lots {
 	min-height: 723px;
 	margin-top: 180px;
-	padding-left: 24px;
 	padding-right: 24px;
+	padding-left: 24px;
 	font-size: 20px;
 }
 
 .lots__heading {
-	text-transform: uppercase;
-	font-size: 40px;
 	margin-left: 40px;
+	font-size: 40px;
+	text-transform: uppercase;
 }
 
 .lots__card-list {
-	margin-top: 27px;
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 25px;
 	flex-wrap: wrap;
+	grid-template-columns: repeat(3, 334px);
 	justify-content: space-between;
+	gap: 25px;
+	margin-top: 27px;
 }
 
 .lots__card-list-item {
 	min-height: 596px;
-	width: 334px;
-	list-style-type: none;
+	list-style: none;
 }
 
 .card-link {
@@ -162,16 +156,16 @@
 }
 
 .card {
-	height: 100%;
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	position: relative;
-	background-size: cover;
+	height: 100%;
+  padding: 48px 40px;
+	color: #fff;
 	background-repeat: no-repeat;
 	background-position: center;
-	padding: 48px 40px;
-	color: #fff;
+	background-size: cover;
 }
 
 .card_type_film {
@@ -189,8 +183,9 @@
 .card__title {
 	z-index: 2;
 	font-size: 22px;
-	text-transform: uppercase;
 	text-decoration: underline;
+	text-underline-position: under;
+	text-transform: uppercase;
 }
 
 .card__text {
@@ -199,20 +194,20 @@
 
 .lots__look-more-link {
 	display: block;
-	margin-left: 40px;
 	margin-top: 30px;
+	margin-left: 40px;
 	text-decoration: underline;
 	text-underline-position: under;
 }
 
 .about {
-	min-height: 595px;
 	display: grid;
 	grid-template-columns: 334px auto;
 	gap: 25px;
+	min-height: 595px;
 	margin-top: 120px;
-	padding-left: 24px;
 	padding-right: 24px;
+	padding-left: 24px;
 }
 
 .about__logo {
@@ -224,10 +219,10 @@
 .about__logo-background {
 	display: flex;
 	justify-content: center;
-	height: 240px;
 	width: 240px;
+	height: 240px;
+	border-radius: 100%;
 	background-color: #000;
-	border-radius: 120px;
 }
 
 .about__logo-image {
@@ -235,50 +230,48 @@
 }
 
 .about__title {
-	display: flex;
 	margin-top: 136px;
-	text-transform: uppercase;
 	font-size: 40px;
+	text-transform: uppercase;
 }
 
 .about__text {
 	margin-top: 100px;
 	font-size: 20px;
-}
-
-.about__text-first-paragraph {
-	padding-right: 5px;
-	margin-bottom: 24px;
 	line-height: 24px;
 }
 
+.about__text-first-paragraph {
+	margin-bottom: 24px;
+	padding-right: 5px;
+}
+
 .footer {
-	margin-top: 180px;
-	min-height: 180px;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	padding-left: 50px;
+	min-height: 180px;
+	margin-top: 180px;
 	padding-right: 50px;
+	padding-left: 50px;
 	font-size: 18px;
 }
 
 .footer__menu-list {
 	flex-direction: column;
 	align-items: center;
-	list-style-type: none;
+	list-style: none;
 }
-
-.footer__social-list-item {
-	list-style-type: none;
-}
-
-.footer__social-icon {
-	height: 48px;
-	width: 48px;
-}
-
 .footer__social-list {
 	display: flex;
 	justify-content: end;
 	gap: 48px;
+}
+
+.footer__social-list-item {
+	list-style: none;
+}
+
+.footer__social-icon {
+	width: 48px;
+	height: 48px;
 }
