--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,7 @@
 	padding: 50px;
 	color: #fff;
 	text-transform: uppercase;
-	background-image: url('/images/cover.jpg');
+	background-image: url(../images/cover.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -169,15 +169,15 @@
 }
 
 .card_type_film {
-	background-image: url(/images/card-lot-01.jpg);
+	background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-	background-image: url(/images/card-lot-02.jpg);
+	background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-	background-image: url(/images/card-lot-03.jpg);
+	background-image: url(../images/card-lot-03.jpg);
 }
 
 .card__title {
