--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,7 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  min-height: 293px;
-  padding-right: 50px;
-  padding-left: 50px;
+  padding: 93px 50px 95px;
   font-size: 18px;
   text-underline-position: under;
 }
@@ -15,17 +13,17 @@
 }
 
 .header__links-list {
-	gap: 32px;
-	list-style: circle;
+  gap: 32px;
+  list-style: circle;
 }
 
 .header__links-list-item_no-bullit {
-	list-style: none;
+  list-style: none;
 }
 
 .link_active {
-	display: inline-block;
-	text-decoration: none;
+  display: inline-block;
+  text-decoration: none;
 }
 
 .header__logo {
@@ -48,229 +46,225 @@
 }
 
 .cover {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	min-height: 757px;
-	padding: 50px;
-	color: #fff;
-	text-transform: uppercase;
-	background-image: url(../images/cover.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 757px;
+  padding: 50px;
+  color: #fff;
+  text-transform: uppercase;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 1;
-	width: 100%;
-	height: 100%;
-	background-color: rgb(0, 0, 0, 0.6);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.6);
 }
 
 .cover__title {
-	z-index: 2;
-	display: flex;
-	flex-direction: column;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
   gap: 20px;
-	margin-top: 115px;
-	font-weight: bold;
-	font-size: 100px;
-	line-height: 114.99999999999999%;
+  margin-top: 115px;
+  font-weight: bold;
+  font-size: 100px;
+  line-height: 114.99999999999999%;
 }
 
 .aligned-text_left {
-	align-self: flex-start;
+  align-self: flex-start;
 }
 
 .aligned-text_center {
-	align-self: center;
+  align-self: center;
 }
 
 .aligned-text_right {
-	align-self: flex-end;
+  align-self: flex-end;
 }
 
 .letter-spacing-extended {
-	letter-spacing: 30px;
+  letter-spacing: 30px;
 }
 
 .no-letter-spacing {
-	margin-right: -30px;
+  letter-spacing: normal;
 }
 
 .cover__description {
-	z-index: 1;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	font-size: 22px;
-	word-spacing: 19px;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 22px;
+  word-spacing: 19px;
 }
 
 .bet-button {
-	width: 256px;
-	height: 51px;
-	border: #fff solid 1px;
-	color: #fff;
-	text-transform: uppercase;
-	background-color: transparent;
+  width: 256px;
+  height: 51px;
+  border: #fff solid 1px;
+  color: #fff;
+  text-transform: uppercase;
+  background-color: transparent;
 }
 
 .lots {
-	min-height: 723px;
-	margin-top: 180px;
-	padding-right: 24px;
-	padding-left: 24px;
-	font-size: 20px;
+  margin-top: 180px;
+  padding-right: 24px;
+  padding-left: 24px;
+  font-size: 20px;
 }
 
 .lots__heading {
-	margin-left: 40px;
-	font-size: 40px;
-	text-transform: uppercase;
+  margin-left: 40px;
+  font-size: 40px;
+  text-transform: uppercase;
 }
 
 .lots__card-list {
-	display: grid;
-	flex-wrap: wrap;
-	grid-template-columns: repeat(3, 334px);
-	justify-content: space-between;
-	gap: 25px;
-	margin-top: 27px;
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(3, 334px);
+  justify-content: space-between;
+  gap: 25px;
+  margin-top: 27px;
 }
 
 .lots__card-list-item {
-	min-height: 596px;
-	list-style: none;
+  min-height: 596px;
+  list-style: none;
 }
 
 .card-link {
-	height: 100%;
-	text-decoration: none;
+  height: 100%;
+  text-decoration: none;
 }
 
 .card {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
   padding: 48px 40px;
-	color: #fff;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
+  color: #fff;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .card_type_film {
-	background-image: url(../images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-	background-image: url(../images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-	background-image: url(../images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .card__title {
-	z-index: 2;
-	font-size: 22px;
-	text-decoration: underline;
-	text-underline-position: under;
-	text-transform: uppercase;
+  z-index: 2;
+  font-size: 22px;
+  text-decoration: underline;
+  text-underline-position: under;
+  text-transform: uppercase;
 }
 
 .card__text {
-	z-index: 2;
+  z-index: 2;
 }
 
 .lots__look-more-link {
-	display: block;
-	margin-top: 30px;
-	margin-left: 40px;
-	text-decoration: underline;
-	text-underline-position: under;
+  display: block;
+  margin-top: 30px;
+  margin-left: 40px;
+  text-decoration: underline;
+  text-underline-position: under;
 }
 
 .about {
-	display: grid;
-	grid-template-columns: 334px auto;
-	gap: 25px;
-	min-height: 595px;
-	margin-top: 120px;
-	padding-right: 24px;
-	padding-left: 24px;
+  display: grid;
+  grid-template-columns: 334px auto;
+  gap: 25px;
+  margin-top: 120px;
+  padding-right: 24px;
+  padding-left: 24px;
 }
 
 .about__logo {
-	display: flex;
-	justify-content: center;
-	margin-top: 35px;
+  display: flex;
+  justify-content: center;
+  margin-top: 35px;
 }
 
 .about__logo-background {
-	display: flex;
-	justify-content: center;
-	width: 240px;
-	height: 240px;
-	border-radius: 100%;
-	background-color: #000;
+  display: flex;
+  justify-content: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 100%;
+  background-color: #000;
 }
 
 .about__logo-image {
-	width: 60%;
+  width: 60%;
 }
 
 .about__title {
-	margin-top: 136px;
-	font-size: 40px;
-	text-transform: uppercase;
+  margin-top: 136px;
+  font-size: 40px;
+  text-transform: uppercase;
 }
 
 .about__text {
-	margin-top: 100px;
-	font-size: 20px;
-	line-height: 24px;
+  margin-top: 100px;
+  font-size: 20px;
+  line-height: 24px;
 }
 
-.about__text-first-paragraph {
-	margin-bottom: 24px;
-	padding-right: 5px;
+.about__text-intro-paragraph {
+  margin-bottom: 24px;
+  padding-right: 5px;
 }
 
 .footer {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	min-height: 180px;
-	margin-top: 180px;
-	padding-right: 50px;
-	padding-left: 50px;
-	font-size: 18px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 180px;
+  padding: 0px 50px 82px;
+  font-size: 18px;
 }
 
 .footer__menu-list {
-	flex-direction: column;
-	align-items: center;
-	list-style: none;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
 }
 .footer__social-list {
-	display: flex;
-	justify-content: end;
-	gap: 48px;
+  display: flex;
+  justify-content: end;
+  gap: 48px;
 }
 
 .footer__social-list-item {
-	list-style: none;
+  list-style: none;
 }
 
 .footer__social-icon {
-	width: 48px;
-	height: 48px;
+  width: 48px;
+  height: 48px;
 }
